Correcoes no front, retirada das chamadas skeleton e resize da app

--- a/client/home/views/home.ng.html
+++ b/client/home/views/home.ng.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
   <div layout="row" layout-align="center center">
     <div flex><p > home em construção.</p></div>
 </div>
