--- a/client/perfis/views/meuPerfil.ng.html
+++ b/client/perfis/views/meuPerfil.ng.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
 
   <div class="row profile-border" style="margin-top: 30px;">
     <!-- para a foto do perfil
@@ -8,10 +8,10 @@
 
     Mais info ver: https://github.com/CollectionFS/Meteor-CollectionFS
     -->
-    <div class="three columns ">
+    <div class="col-md-3 profile-boxes">
     <img src="{{$root.currentUser.profile.profilePic.getFileRecord().url()}}" class="profile-picture">
     </div>
-    <div class="two columns">
+    <div class="col-md-2 profile-boxes">
 
         <span style="font-size: 0.87em;">{{profileTitle}}</span>
         <br>
@@ -26,9 +26,9 @@
       </div>
     </div>
 
-    <div class="two columns ">
+    <div class="col-md-2 profile-boxes">
       <div class="row">
-        <div class="twelve columns">
+        <div class="col-md-12">
           <span><i class="fa fa-star stars"></i></span>
           <span><i class="fa fa-star stars"></i></span>
           <span><i class="fa fa-star stars"></i></span>
@@ -38,32 +38,32 @@
         <div>
             media de avaliações
         </div>
-        <div class="twelve columns"><b class="horas-mentorias">19 hs</b> de mentoria</div>
-        <div class="twelve columns"><b class="horas-mentorias">9</b> badges</div>
+        <div class="col-md-12"><b class="horas-mentorias">19 hs</b> de mentoria</div>
+        <div class="col-md-12"><b class="horas-mentorias">9</b> badges</div>
       </div>
     </div>
 
-    <div class="two columns ">
+    <div class="col-md-2 profile-boxes">
       <p class="text-center">
         {{$root.currentUser.profile.breve_descricao}}
       </p>
     </div>
 
-    <div class="one column" style=" margin-left:10px; margin-right:0;">
+    <div class="col-md-1 profile-boxes">
       <a href="{{$root.currentUser.profile.facebook}}"><i class="fa fa-facebook-official icon-bar"></i></a>
 
       <a href="{{$root.currentUser.profile.twitter}}"><i class="fa fa-twitter icon-bar"></i></a>
       <a href="{{$root.currentUser.profile.linkedIn}}"><i class="fa fa-linkedin icon-bar"></i></a>
 
     </div>
-    <div class="two columns" style="margin-left:0;">
-      <button style="width:220px;"><i class="fa fa-commenting-o"></i> Mensagens <span></span></button>
-      <button style="width:220px;"><i class="fa fa-calendar"></i> Agenda <span></span></button>
-      <button style="width:220px;"><i class="fa fa-group"></i> Ações de mentoria<span></span></button>
+    <div class="col-md-2 profile-boxes">
+      <button class="btn btn-default profile-actions" ><i class="fa fa-commenting-o"></i> Mensagens <span></span></button>
+      <button class="btn btn-default profile-actions" ><i class="fa fa-calendar"></i> Agenda <span></span></button>
+      <button class="btn btn-default profile-actions" ><i class="fa fa-group"></i> Ações de mentoria<span></span></button>
     </div>
   </div>
   <!-- Calendario daqui pra baixo-->
   <div class="row profile-border">
-    <div id="calendar"  style="width:800px; margin-left:auto; margin-right:auto;"></div>
+    <div id="calendar"></div>
   </div>
 </div>
