-  2° Commit para enhancement da tela de login, issue #23. Mudei algumas coisas no css, não se preocupe se afetar outras partes do site.

--- a/client/perfis/views/login.ng.html
+++ b/client/perfis/views/login.ng.html
@@ -2,6 +2,7 @@
     <div class="login-home frame-form text-center space-header">
         <form class="login-form frame-spaces">
             <div class="row">
+                <br>
                 <img class="img-responsive center-block" src="../resources/Logo-Agripa.png"/>
                 <br><br>
                 <h4 class="text-center">Bem-vindo ao sistema de gestão de mentorias</h4><br>
@@ -28,7 +29,7 @@
                 <div class="text-center text-decoration-underline">
                     <a class="color-white" href="/cadastroPerfil">Não possui uma conta? Cadastre-se</a>
                     <br><br>
-                    <a class="color-white" href="/resetSenha">Esqueci minha senha</a>
+                    <a class="color-white" href="/resetSenha">Esqueceu sua senha?</a>
                 </div>
             </div>
         </form>
